<!--
  ~ Copyright (c) 2015. Project Mayhem: Jacob Hohisel, Loralyn Solomon, Brian Plocki, Brandon Soto.
  -->

<resources>
    <string name="app_name">GeoTracker</string>
    <string name="action_settings">Settings</string>

    <!-- Accept Agreement -->
    <string name="title_agreement">Terms &amp; Conditions</string>
    <string name="action_accept">Accept</string>
    <string name="agreement_terms">By accepting these terms and conditions, you agree to share data.
        The term data refers to collected information that will be stored on a remote
        server for analysis. Data includes, but is not limited to, location information and camera
        access. Please note that in addition to data, the developers of this app now become the sole
        benefactor in your will, and once you have expired, which may or may not be due intervention
        on our part, we will inherit all of your assets. Which also include this phone.</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">GeoTracker</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must exceed 5 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="unknown_email">No user with this email</string>
    <string name="error_field_required">This field is required</string>
    <!-- End login -->

    <!-- Registration -->
    <string name="title_activity_registration">Registration</string>
    <string name="password_confirm">Confirm password</string>
    <string name="action_register_short">Register</string>
    <string name="action_register">Register</string>
    <string name="answer_text">Answer</string>

    <!-- MyAccount -->
    <string name="title_activity_my_account">My Account</string>
    <string name="start_hint">Start date</string>
    <string name="end_hint">End date</string>
    <string name="action_my_trajectory">My Trajectory</string>

    <!-- Forgot Password -->
    <string name="title_activity_reset">Reset Password</string>
    <string name="action_forgot">Forgot Password</string>
    <string name="answer_hint">Answer</string>
    <string name="action_reset">Reset Password</string>
    <string name="new_pw">New Password</string>
    <string name="confirm_pw">Confirm Password</string>

    <string name="title_activity_my_trajectory">My Trajectory</string>

</resources>
